--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.1.0",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-testing-library": "^8.0.1"
+    "react-testing-library": "^8.0.1",
+    "redux": "^4.0.5",
+    "redux-toolkit": "^1.1.2",
+    "yup": "^0.29.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^4.12.0"
   }
 }
