--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "^5.1.8",
     "axios": "^0.19.2",
     "cra-template-typescript": "1.0.3",
+    "jsdom": "^16.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
@@ -26,11 +27,12 @@
     "redux-toolkit": "^1.1.2",
     "typescript": "^3.9.7",
     "yup": "^0.29.2"
+
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
